# According to https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = Overlort
version = 0.1.0
description = This package provides a tenant, which can handle worklfows in FINALES.
long_description = file: README.md
license = MIT

[options]
package_dir =
    = src
packages = find:
install_requires =
python_requires = >=3.9

[options.packages.find]
where = src